# Cece

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.c
demo/: demo.c
include/cece/: arguments.h  cece.h  lex.h  log.h  memory.h  pre.h  result.h  tree.h
source/: arguments.c  cece.c  lex.c  log.c  memory.c  pre.c  tree.c
tests/: tests.c
